--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samginn/react-scripts",
-  "version": "0.7.4",
+  "version": "0.7.5",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebookincubator/create-react-app",
   "license": "BSD-3-Clause",
@@ -23,7 +23,6 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
-    "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
     "babel-eslint": "7.0.0",
     "babel-jest": "16.0.0",
@@ -54,6 +53,8 @@
     "json-loader": "0.5.4",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
+    "postcss-cssnext": "2.8.0",
+    "postcss-import": "8.2.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.3.0",
@@ -76,7 +77,6 @@
     "fsevents": "1.0.14"
   },
   "bundledDependencies": [
-    "autoprefixer",
     "babel-core",
     "babel-eslint",
     "babel-jest",
@@ -99,7 +99,6 @@
     "extract-text-webpack-plugin",
     "file-loader",
     "filesize",
-    "find-cache-dir",
     "fs-extra",
     "gzip-size",
     "html-webpack-plugin",
@@ -108,6 +107,8 @@
     "json-loader",
     "object-assign",
     "path-exists",
+    "postcss-cssnext",
+    "postcss-import",
     "postcss-loader",
     "promise",
     "react-dev-utils",
