--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -54,6 +54,7 @@
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-cssnext": "2.8.0",
+    "postcss-import": "8.2.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.3.0",
@@ -107,6 +108,7 @@
     "object-assign",
     "path-exists",
     "postcss-cssnext",
+    "postcss-import",
     "postcss-loader",
     "promise",
     "react-dev-utils",
